[package]
authors = ["Bryce Johnston <bryce@beaorn.com>"]
categories = ["command-line-utilities"]
description = "Ham Radio command-line tools"
homepage = "https://github.com/beaorn/hrt"
license = "MIT"
name = "hrt"
readme = "README.md"
repository = "https://github.com/beaorn/hrt"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33", features = ["yaml"]}
config = "0.9"
dirs = "2.0"
reqwest = "0.9.20"
serde = { version = "1.0.99", features = ["derive"] }
serde_derive = "1.0.99"
serde-xml-rs = "0.3.1"