[package]
authors = ["Bryce Johnston <bryce@beaorn.com>"]
categories = ["command-line-utilities"]
keywords = ["radio", "amateur", "ham", "qrz", "hamqth"]
description = "Ham Radio related command line tools"
homepage = "https://github.com/beaorn/hrt"
license = "MIT"
name = "hrt"
readme = "README.md"
repository = "https://github.com/beaorn/hrt"
version = "0.1.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33.0", features = ["yaml"]}
config = "0.9.3"
dirs = "2.0.2"
reqwest = "0.9.20"
serde = { version = "1.0.99", features = ["derive"] }
serde_derive = "1.0.99"
serde-xml-rs = "0.3.1"